# hi-interview

./: .gitignore  README.md  pyproject.toml  requirements.txt
hi_interview/: __main__.py
hi_interview/cli/: __init__.py  cli.py
hi_interview/task_manager/: __init__.py  task.py  task_manager.py
tests/: test_task.py  test_task_manager.py
