[tool.poetry]
name = "hi-interview"
version = "0.1.0"
description = "HT company interview test assignment written in Python"
authors = ["karrless <konstantin.geydarov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
